WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
51632
Pass style for <area> instead of associated <img> when querying whether the theme draws the focus ring for an <area>
https://bugs.webkit.org/show_bug.cgi?id=51632
Summary
Pass style for <area> instead of associated <img> when querying whether the t...
Daniel Bates
Reported
2010-12-26 23:37:27 PST
We should pass the style of the focused <area> to RenderTheme::supportsFocusRing() to determine whether theme is responsible for painting focus rings for <area>s. Currently, we pass the style of the <img> associated with the focused <area>.
Attachments
Patch
(2.54 KB, patch)
2010-12-26 23:39 PST
,
Daniel Bates
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Daniel Bates
Comment 1
2010-12-26 23:39:31 PST
Created
attachment 77481
[details]
Patch It's not possible to test this at this time since there are no themes that override focus ring drawing for <area>s.
Eric Seidel (no email)
Comment 2
2010-12-28 14:03:45 PST
Comment on
attachment 77481
[details]
Patch If its not posible to test this, why make the change?
Antonio Gomes
Comment 3
2010-12-30 07:34:01 PST
+2010-12-26 Daniel Bates <
dbates@rim.com
@rim.com> Dan, please fix your email before landing.
Daniel Bates
Comment 4
2010-12-30 09:15:41 PST
(In reply to
comment #2
)
> (From update of
attachment 77481
[details]
) > If its not posible to test this, why make the change?
I spoke with Eric Seidel on IRC on 12/28/10 about this: [3:22pm] dydz: eseidel: hi. With regards to <
https://bugs.webkit.org/show_bug.cgi?id=51632
> I thought to make this change for correctness [3:23pm] dydz: Although, you're right the move does not have any impact at this time [3:23pm] dydz: Maybe it is sufficient to just keep the bug around to remember to move this should someone what to detect <area>s [3:24pm] dydz: *want to detect <area>s and do custom focus ring drawing [3:25pm] dydz: Notice, <img>s do not have a concept of a focus ring since they are not focusable. It is the <area> element this is focusable. [3:28pm] dydz: eseidel: That being said, would you suggest we don't make this change at this time? [3:29pm] eseidel: dydz: I'm just not sure what it's doing or why [3:31pm] dydz: eseidel: It's a semantic change based on the idea that when drawing a focus ring for an image map we are really drawing a focus ring for an <area> not an <img> (see <
http://www.w3.org/TR/html5/the-map-element.html#the-area-element
>) [3:32pm] eseidel: dydz: ok. so I would just leave it up for review and forget about ti. eventually hyatt or someone will look
Daniel Bates
Comment 5
2010-12-30 09:16:04 PST
(In reply to
comment #3
)
> +2010-12-26 Daniel Bates <
dbates@rim.com
@rim.com> > > Dan, please fix your email before landing.
Thanks for pointing this out. Will fix before landing.
Daniel Bates
Comment 6
2010-12-31 16:37:08 PST
Committed
r74839
: <
http://trac.webkit.org/changeset/74839
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug